v1.99.9
----------------------------------------------------------------------------------------------------
 * A domain that is managed by md now exposes a status resource at /.httpd/certificate-status
   in JSON format. This lists serial number, valid-from, expires and the cert itself in base64url
   encoding. Not highly relevant since the connection exposed the certificate already.
   When a domain certificate has been renewed however, the same properties of the renewed
   cert are available under the field "staging". When the server is restarted and the cert
   is activated, these disappear again. This makes it easy to scan domains for pending
   certificate renewals and also gives information of upcoming certificates right away.
 * Added MD section to Apache's "server-status" page listing all managed domains and their
   settings, renewal status and error count.

v1.99.8
----------------------------------------------------------------------------------------------------
 * Merge of changes up to  1.1.19
 * Fix for #117, explicitly set file permissions to work around umask defaults.

v1.99.7
----------------------------------------------------------------------------------------------------
 * Fix by @nono303 to fix the Windows build that was broken in the last release.

v1.99.6
----------------------------------------------------------------------------------------------------
 * When the server is not started by root, the module no longer tries to chown() the
   staging and challenges directories as User and Group directives are ignored. Fixes #115.
 * When a md.json file in the store cannot be parsed, it is ignore and overwritten during
   initial synch at server start. 
 * When migrating from ACMEv1 to ACMEv2 on the same host, the account private key of an
   existing account is reused on registration. Let's Encrypt internally treats this as
   the same account, although it is exposed using different urls. This helps keeping