@@ -105,6 +105,7 @@ struct md_t {
     md_state_t state;               /* state of this MD */
     apr_time_t valid_from;          /* When the credentials start to be valid. 0 if unknown */
     apr_time_t expires;             /* When the credentials expire. 0 if unknown */
+    const char *cert_serial;        /* if != NULL, serial number of the certificate in hex notation */
     int can_acme_tls_1;             /* MD has at least one vhost which allows ALPN protocol "acme-tls/1" */
     
     const struct md_srv_conf_t *sc; /* server config where it was defined or NULL */
