@@ -276,6 +276,7 @@ md_t *md_clone(apr_pool_t *p, const md_t *src)
         if (src->ca_challenges) {
             md->ca_challenges = md_array_str_clone(p, src->ca_challenges);
         }
+        if (src->cert_serial) md->cert_serial = apr_pstrdup(p, src->cert_serial);
         md->can_acme_tls_1 = src->can_acme_tls_1;
     }    
     return md;   
@@ -301,6 +302,7 @@ md_t *md_merge(apr_pool_t *p, const md_t *add, const md_t *base)
     else if (base->ca_challenges) {
         n->ca_challenges = apr_array_copy(p, base->ca_challenges);
     }
+    n->cert_serial = add->cert_serial? add->cert_serial : base->cert_serial;
     return n;
 }
 
@@ -359,6 +361,9 @@ md_json_t *md_to_json(const md_t *md, apr_pool_t *p)
                 break;
         }
         md_json_setb(md->must_staple > 0, json, MD_KEY_MUST_STAPLE, NULL);
+        if (md->cert_serial) {
+            md_json_sets(md->cert_serial, json, MD_KEY_CERT, MD_KEY_SERIAL, NULL);
+        }
         md_json_setb(md->can_acme_tls_1 > 0, json, MD_KEY_PROTO, MD_KEY_ACME_TLS_1, NULL);
         return json;
     }
@@ -417,6 +422,7 @@ md_t *md_from_json(md_json_t *json, apr_pool_t *p)
             md->require_https = MD_REQUIRE_PERMANENT;
         }
         md->must_staple = (int)md_json_getb(json, MD_KEY_MUST_STAPLE, NULL);
+        md->cert_serial = md_json_dups(p, json, MD_KEY_CERT, MD_KEY_SERIAL, NULL);            
         md->can_acme_tls_1 = (int)md_json_getb(json, MD_KEY_PROTO, MD_KEY_ACME_TLS_1, NULL);
         
         return md;
