@@ -1,3 +1,7 @@
+ * MD status now initialized fully in global list. Fixes new status handler to assess
+   things even when running in non-privileged setup where access to file system is no
+   longer allowed.
+
 v1.99.9
 ----------------------------------------------------------------------------------------------------
  * A domain that is managed by md now exposes a status resource at /.httpd/certificate-status
